# mipt-vm

./: .clang-format  CMakeLists.txt  README.md
benchmarks/: CMakeLists.txt  square_equation.bc  square_equation.cpp
common/: debug.cpp  debug.h  macros.h
file/: bytecode.h  instruction.cpp  instruction.h  meta.h  method.h  proto.h  string_table.h
runtime/: frame.h  interpreter.cpp  interpreter.h  register_manager.h  runtime.cpp  runtime.h  vm.cpp  vm.h
stdlib/: CMakeLists.txt  io.cpp  io.h  math.cpp  math.h
tests/: CMakeLists.txt  mipt_vm.cpp
tests/tests_bytecode/: call.bc
